# hpd-20.2026

./: .gitignore  README.rst  pyproject.toml
.claude/: settings.json
.claude/agents/: e2e-runner.md  security-reviewer.md
.claude/commands/: verify-ui.md
.claude/hooks/: block-hs0.sh  ruff-format.sh
.claude/skills/hpd20-domain/: SKILL.md
.claude/skills/verify-ui/: SKILL.md
.github/workflows/: ci.yml
docs/: JURGEN-NOTES.rst
docs/planning/: 2026-04-24-modernization-plan.md
src/hpd20/: __init__.py  core.py  ethnic_scales.py  instrumentname.py  kit.py  melodypadpattern.py  memoryops.py  pad.py  scales.py
src/hpd20/midi/: __init__.py  engine.py  persistence.py
src/hpd20/web/: __init__.py  app.py  favorites.py  skin_geometry.py
src/hpd20/web/static/: library.js  midi.js  styles.css  swap.js
src/hpd20/web/templates/: _instrument_library.html  _midi_panel.html  _pad_form.html  _skin.html  _slot_chooser.html  base.html  kit.html  no_backup.html  pad.html
tests/: conftest.py  test_instrument_library.py  test_instrument_on_pad.py  test_kit_export.py  test_memoryops.py  test_midi.py  test_pad_swap.py  test_roundtrip.py  test_scales.py  test_skin_geometry.py  test_web.py
