[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hpd20"
version = "0.1.0"
description = "Patch editor and librarian for the Roland HPD-20 HandSonic"
readme = "README.rst"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Jürgen Schwietering", email = "scjurgen@yahoo.com" },
    { name = "Vince Romanelli", email = "vince@vinceromanelli.com" },
]
keywords = ["roland", "handsonic", "hpd20", "hpd-20", "percussion", "editor", "librarian", "midi", "kit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Editors",
]
dependencies = []

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "jinja2>=3.1", "python-multipart>=0.0.9"]
midi = ["mido>=1.3", "python-rtmidi>=1.5"]
dev = ["pytest>=8", "pytest-cov>=5", "httpx>=0.27", "ruff>=0.5", "mypy>=1.10"]

[project.urls]
Repository = "https://github.com/vro3/hpd-20.2026"
Issues = "https://github.com/vro3/hpd-20.2026/issues"

[project.scripts]
hpd20-cli = "hpd20.core:run_main"
hpd20-web = "hpd20.web:run"

[tool.hatch.build.targets.wheel]
packages = ["src/hpd20"]

[tool.hatch.build.targets.sdist]
include = ["src/hpd20", "tests", "README.md", "LICENSE", "docs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"src/hpd20/instrumentname.py" = ["E741"]  # big auto-generated data table
"src/hpd20/ethnic_scales.py" = ["E741"]   # big auto-generated data table

[tool.mypy]
python_version = "3.10"
packages = ["hpd20"]
mypy_path = "src"
ignore_missing_imports = true
